[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-yasir"
version = "1.0.0"
description = "Personal AI Research & Creative Agent for Muhammad Yasir Imam"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Yasir Imam", email = "imammuhammadyasir@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "ollama>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "httpx>=0.26.0",
    "arxiv>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "markdown>=3.5.0",
    "pytest>=7.4.0",
]

[project.scripts]
openclaw-yasir = "openclaw_yasir.main:main"

[project.urls]
Homepage = "https://github.com/muhammadyasirimam/openclaw-yasir"
Documentation = "https://muhammadyasirimam.github.io/openclaw-yasir"
